--- a/personality_classification.ipynb
+++ b/personality_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4wbOzA4aPHM8zil6Xp7wN",
+      "authorship_tag": "ABX9TyPqfbuNtZA+5/fNRc+BPWEu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1433,7 +1433,7 @@
         "sns.set_theme(style=\"whitegrid\")\n",
         "\n",
         "# Pick a bright or pastel palette\n",
-        "colors = sns.color_palette(\"Set2\")  # You can try \"Set1\", \"pastel\", \"husl\" etc.\n",
+        "colors = sns.color_palette(\"Set2\")\n",
         "\n",
         "fig, axes = plt.subplots(2, 3, figsize=(15, 10))\n",
         "axes = axes.ravel()\n",
@@ -1445,7 +1445,7 @@
         "        x='Personality',\n",
         "        y=feature,\n",
         "        ax=axes[idx],\n",
-        "        palette=colors  # Add colorful palette\n",
+        "        palette=colors\n",
         "    )\n",
         "    axes[idx].set_title(f'{feature} by Personality Type', fontsize=12)\n",
         "    axes[idx].set_xlabel(\"\")\n",
@@ -1488,9 +1488,8 @@
         "from sklearn.svm import SVC\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.naive_bayes import GaussianNB\n",
-        "import pandas as pd\n",
         "\n",
-        "# Assuming df is your DataFrame\n",
+        "# splitting the dataset\n",
         "X = df.drop('Personality',axis=1)\n",
         "y = df['Personality']\n",
         "\n",
@@ -1519,23 +1518,25 @@
         "    model.fit(X_train, y_train)\n",
         "    y_pred = model.predict(X_test)\n",
         "    print(f\"=== {name} ===\")\n",
+        "    print()\n",
         "    print(classification_report(y_test, y_pred))\n",
-        "    print()\n"
+        "    print(\" \")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "88nCxgtFVf6I",
-        "outputId": "feb0d557-c622-43a8-b354-b13f3335b447"
+        "outputId": "d2824fce-bed7-4a75-dea1-f84dd94e44c5"
       },
-      "execution_count": 101,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "=== Logistic Regression ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      1.00      1.00       504\n",
@@ -1545,8 +1546,9 @@
             "   macro avg       1.00      0.99      0.99      1000\n",
             "weighted avg       1.00      0.99      0.99      1000\n",
             "\n",
-            "\n",
+            " \n",
             "=== Decision Tree ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      1.00      0.99       504\n",
@@ -1556,8 +1558,9 @@
             "   macro avg       0.99      0.99      0.99      1000\n",
             "weighted avg       0.99      0.99      0.99      1000\n",
             "\n",
-            "\n",
+            " \n",
             "=== Random Forest ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      1.00      1.00       504\n",
@@ -1567,8 +1570,9 @@
             "   macro avg       1.00      1.00      1.00      1000\n",
             "weighted avg       1.00      1.00      1.00      1000\n",
             "\n",
-            "\n",
+            " \n",
             "=== Gradient Boosting ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      1.00      1.00       504\n",
@@ -1578,8 +1582,9 @@
             "   macro avg       1.00      1.00      1.00      1000\n",
             "weighted avg       1.00      1.00      1.00      1000\n",
             "\n",
-            "\n",
+            " \n",
             "=== SVC ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      1.00      0.99       504\n",
@@ -1589,8 +1594,9 @@
             "   macro avg       0.99      0.99      0.99      1000\n",
             "weighted avg       0.99      0.99      0.99      1000\n",
             "\n",
-            "\n",
+            " \n",
             "=== KNN ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      0.99      0.99       504\n",
@@ -1600,8 +1606,9 @@
             "   macro avg       0.99      0.99      0.99      1000\n",
             "weighted avg       0.99      0.99      0.99      1000\n",
             "\n",
-            "\n",
+            " \n",
             "=== Naive Bayes ===\n",
+            "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "   Extrovert       0.99      1.00      1.00       504\n",
@@ -1611,7 +1618,7 @@
             "   macro avg       1.00      0.99      0.99      1000\n",
             "weighted avg       1.00      0.99      0.99      1000\n",
             "\n",
-            "\n"
+            " \n"
           ]
         }
       ]
@@ -1619,62 +1626,22 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.preprocessing import MinMaxScaler\n",
-        "\n",
-        "# Separate features and target\n",
-        "X = df.drop(columns=['Personality'])  # Replace 'Personality' with your target column name\n",
-        "y = df['Personality']\n",
-        "\n",
-        "# Create scaler\n",
-        "scaler = MinMaxScaler()\n",
-        "\n",
-        "# Fit and transform only features\n",
-        "X_scaled = scaler.fit_transform(X)\n",
-        "\n",
-        "# Putting back into a DataFrame\n",
-        "X_scaled = pd.DataFrame(X_scaled, columns=X.columns)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "H7tHxZbW1N-f"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_scaled"
-      ],
-      "metadata": {
-        "id": "a1K8j7O8Bp8Z"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
         "\n",
-        "# 1. Prepare data\n",
-        "X = df.drop('Personality', axis=1)\n",
-        "y = df['Personality']\n",
-        "\n",
-        "# 2. Train model 6\n",
+        "# 1. Train model 6\n",
         "rf_model = RandomForestClassifier(random_state=42)\n",
         "rf_model.fit(X, y)\n",
         "\n",
-        "# 3. DataFrame for feature importance\n",
+        "# 2. DataFrame for feature importance\n",
         "feat_importances_df = pd.DataFrame({\n",
         "    'feature': X.columns,\n",
         "    'importance': rf_model.feature_importances_\n",
         "}).sort_values(by='importance', ascending=False)\n",
         "\n",
-        "# 4. Styling\n",
+        "# 3. Styling\n",
         "sns.set_theme(style=\"whitegrid\")  # White grid + soft colors\n",
         "\n",
-        "# 5. Plot\n",
+        "# 4. Plot\n",
         "plt.figure(figsize=(12, 6))\n",
         "sns.barplot(\n",
         "    x='importance',\n",
@@ -1683,7 +1650,7 @@
         "    palette='pastel'  # Exact pastel style\n",
         ")\n",
         "\n",
-        "# 6. Title & layout\n",
+        "# 5. Title & layout\n",
         "plt.title(\"Feature Importance\", fontsize=14)\n",
         "plt.xlabel(\"Importance Score\")\n",
         "plt.ylabel(\"Feature\")\n",
@@ -1720,15 +1687,6 @@
       "metadata": {
         "id": "vmirj0_2MiCG"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5nemoxyzLcsC"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
