--- a/personality_classification.ipynb
+++ b/personality_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqfbuNtZA+5/fNRc+BPWEu",
+      "authorship_tag": "ABX9TyOilTrtOFR+WiNyFLQzDzTl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1628,7 +1628,7 @@
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
         "\n",
-        "# 1. Train model 6\n",
+        "# 1. Train model\n",
         "rf_model = RandomForestClassifier(random_state=42)\n",
         "rf_model.fit(X, y)\n",
         "\n",
