--- a/personality_classification.ipynb
+++ b/personality_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOilTrtOFR+WiNyFLQzDzTl",
+      "authorship_tag": "ABX9TyNmnPudOVvM515XHcfAjVpu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,35 @@
         "\n",
         "1) We are not juding people on their personality types (like  which personality is better ) but our only objective is draw solid conclusions from this dataset for the business point of view\n",
         "\n",
-        "2) let's see the defination of Introverts and extroverts so that we all can come on the same page  "
+        "2) let's see the defination of Introverts and extroverts so that we all can come on the same page  \n",
+        "\n",
+        "   . 🌑 Introvert\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Definition: Someone who recharges energy by being alone.\n",
+        "\n",
+        "Focus: More inward – their thoughts, feelings, and ideas.\n",
+        "\n",
+        "Social Behavior: Can be social, talkative, even confident – but too much external stimulation drains them.\n",
+        "\n",
+        "Example: A person who enjoys a deep one-on-one conversation over a party. They might enjoy the party, but feel exhausted afterward.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "   .🌕 Extrovert\n",
+        "\n",
+        "\n",
+        "\n",
+        "Definition: Someone who recharges by being around people and activity.\n",
+        "\n",
+        "Focus: Outward – external world, people, things.\n",
+        "\n",
+        "Social Behavior: Feels more alive when engaging socially, thrives in group settings.\n",
+        "\n",
+        "Example: Someone who feels bored or low when alone too long and feels energized in a group discussion."
       ],
       "metadata": {
         "id": "ruur0GpuPtrM"
